--- a/index.html
+++ b/index.html
@@ -16,46 +16,50 @@
   <!-- === header section start === -->
   <header>
     <div class="top-navigation">
-      <nav class="navbar navbar-expand p-0">
-        <div class="container justify-content-between">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="#" class="nav-link"><i class="fas fa-bars"></i></a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link"><i class="far fa-search"></i></a>
-            </li>
-          </ul>
-          <div class="middle-sec text-center">
-            <a class="navbar-brand mx-2 mx-md-0" href="index.html">
-              <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
-            </a>
-            <p class="address">Monday September 11, 2023 <br class="d-md-none"> <span
-                class="d-none d-md-inline-block">|</span> Last Update:
-              September 11, 2023 EDT</p>
-          </div>
+      <div class="container">
+        <div class="date-link d-flex align-items-center justify-content-between">
+          <p style="color: #8ea8c0; font-size: 12px;">Sep 19, 2023 <span class="d-none d-md-inline-block">Last Updated
+              11:56 AM EDT</span>
+          </p>
 
-          <a href="#" class="subscribe-btn">Subscribe</a>
+          <ul class="ps-0 d-flex">
+            <li><a href="#">Slideshows</a></li>
+            <li><a href="#">Archives</a></li>
+            <li><a href="#">Videos</a></li>
+          </ul>
         </div>
-      </nav>
+      </div>
+      <hr>
+      <div class="container">
+        <div class="date-link d-flex align-items-center justify-content-between">
+          <a class="navbar-brand m-0" href="index.html">
+            <img src="assets/images/logo.png" alt="logo" class="img-fluid" />
+          </a>
+
+          <div>
+            <button>Subscribe Now</button>
+            <button><i class="fas fa-search"></i></button>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="bottom-navigation shadow-sm">
       <div class="container">
         <nav class="d-flex link-wrapper align-items-center justify-content-lg-center">
-          <a href="#" class="nav-link ms-0">Franchise News</a>
-          <a href="#" class="nav-link">Featured Franchise</a>
-          <a href="#" class="nav-link">Biz/Tech</a>
-          <a href="#" class="nav-link">Guide</a>
-          <a href="#" class="nav-link">Marketing</a>
-          <a href="#" class="nav-link">Review</a>
-          <a href="#" class="nav-link">Life</a>
+          <a href="#" class="nav-link ms-0">HOME</a>
+          <a href="#" class="nav-link active">NEWS</a>
+          <a href="#" class="nav-link">WORLD</a>
+          <a href="#" class="nav-link">MARKETS</a>
+          <a href="#" class="nav-link">TECH</a>
+          <a href="#" class="nav-link">PERSONAL FINANCE</a>
+          <a href="#" class="nav-link">LIFE</a>
         </nav>
       </div>
     </div>
   </header>
   <!-- ===//end of header section === -->
 
-  <!-- === banner section start === -->
+  <!-- === main section start === -->
   <section class="main-contents-home py-5">
     <div class="container">
       <div class="row gx-xl-5">
@@ -994,70 +998,66 @@
       </div>
     </div>
   </section>
-  <!-- ===//end of banner section === -->
-
-
-
+  <!-- ===//end of  section === -->
 
   <!-- === footer section start === -->
   <footer class="footer">
-    <div class="footer-top">
-      <div class="container">
-        <img src="assets/images/footer-logo.png" alt="img" class="f-logo img-fluid">
-        <div class="link-wrap">
-          <div class="news">
-            <h4 class="title-f">News</h4>
-            <ul class="p-0">
-              <li><a href="#">Franchise News</a></li>
-              <li><a href="#">Featured Franchise</a></li>
-              <li><a href="#">Biz/Tech</a></li>
-            </ul>
+    <div class="container">
+      <div class="top">
+        <img src="assets/images/f-logo.png" alt="img" class="img-fluid">
+        <span style="color: #cbcbcb; font-size: 12px;">© 2023 Money Times. All rights reserved. </span>
+      </div>
+    </div>
+    <hr class="my-3">
+
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-6 col-md-8">
+          <div class="row">
+            <div class="col-md-6 col-lg-4">
+              <ul class="p-0">
+                <li><a href="#">News</a></li>
+                <li><a href="#">World</a></li>
+                <li><a href="#">Markets</a></li>
+                <li><a href="#">Tech</a></li>
+                <li><a href="#">Personal Finance</a></li>
+                <li><a href="#">Life</a></li>
+              </ul>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <ul class="p-0">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+              <ul class="p-0">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Google+</a></li>
+                <li><a href="#">RSS</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="news">
-            <ul class="ps-0 pt-4">
-              <li><a href="#">Guide</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Review</a></li>
-            </ul>
-          </div>
-          <div class="news">
-            <ul class="ps-0 pt-4">
-              <li><a href="#">Life</a></li>
-              <li><a href="#">Career</a></li>
-            </ul>
-          </div>
-          <div class="Customer-Support pt-4 pt-md-0">
-            <h4 class="title-f">Customer Support</h4>
-            <ul class="p-0">
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Cookie Policy</a></li>
-            </ul>
-          </div>
-          <div class="Company pt-4 pt-xl-0">
-            <h4 class="title-f">Company</h4>
-            <ul class="p-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact us</a></li>
-              <li><a href="#">Advertise with us</a></li>
-            </ul>
-          </div>
-          <div class="Follow-Us pt-4 pt-xl-0">
-            <h4 class="title-f">Follow Us</h4>
-            <ul class="p-0">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">LinkedIn</a></li>
-            </ul>
+        </div>
+        <div class="col-6 col-md-4">
+          <div class="sign-up">
+            <p>Sign up for WEekly Money Times and more</p>
+            <form>
+              <div class="d-flex justify-content-between in-form my-4">
+                <input type="email" class="w-100" placeholder="EMAIL ADDRESS">
+                <input type="submit" value="SIGN UP">
+              </div>
+            </form>
+            <span>By subscribing to this newsletter, you agree to our Terms of Service and Privacy Policy</span>
           </div>
         </div>
       </div>
     </div>
-    <div class="foot-bottom text-center">
-      <div class="container">
-        <p>Copyright © 2023 Franchise HERALD. All rights reserved. Use of this Web site constitutes acceptance of our
-          Terms and Conditions of Use and Privacy Policy.</p>
-      </div>
     </div>
   </footer>
   <!-- ===//end of footer section === -->
@@ -1065,7 +1065,6 @@
 
   <script src="assets/vendor/bootstrap/js/popper.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/vendor/swiper/js/swiper-bundle.min.js"></script>
   <script src="assets/js/custom.js"></script>
 </body>
 
