link active corrected

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="bottom-navigation shadow-sm">
       <div class="container">
         <nav class="d-flex link-wrapper align-items-center justify-content-lg-center">
-          <a href="#" class="nav-link ms-0">HOME</a>
+          <a href="#" class="nav-link ms-0 active">HOME</a>
           <a href="#" class="nav-link active">NEWS</a>
           <a href="#" class="nav-link">WORLD</a>
           <a href="#" class="nav-link">MARKETS</a>
