--- a/article.html
+++ b/article.html
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -300,7 +300,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -366,7 +366,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -382,7 +382,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -398,7 +398,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -414,7 +414,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
