--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
                 <p class="section-title">Featured Stories</p>
                 <hr>
                 <div class="news-link ">
-                  <img src="assets/images/main-top/mt-1.png" alt="image" class="img-fluid mb-2">
+                  <div>
+                    <img src="assets/images/main-top/mt-1.png" alt="image" class="img-fluid mb-2">
+                  </div>
                   <span class="category-title">Personal Finance </span>
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">How Do Novice Traders Plan Forex Trading?</h3>
@@ -203,7 +205,9 @@
                 </div>
                 <hr class="my-3">
                 <div class="news-link">
-                  <img src="assets/images/main-top/mt-2.png" alt="image" class="img-fluid mb-2">
+                  <div>
+                    <img src="assets/images/main-top/mt-2.png" alt="image" class="img-fluid mb-2">
+                  </div>
                   <span class="category-title">Personal Finance </span>
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
@@ -215,7 +219,9 @@
                 </div>
                 <hr class="my-3">
                 <div class="news-link">
-                  <img src="assets/images/main-top/mt-3.png" alt="image" class="img-fluid mb-2">
+                  <div>
+                    <img src="assets/images/main-top/mt-3.png" alt="image" class="img-fluid mb-2">
+                  </div>
                   <span class="category-title">Personal Finance </span>
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Why You Need an Emergency Fund and How to Build One</h3>
@@ -702,7 +708,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -718,7 +724,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -734,7 +740,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -750,7 +756,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -766,7 +772,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -818,7 +824,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -835,7 +841,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -852,7 +858,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -869,7 +875,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -886,7 +892,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -913,7 +919,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -929,7 +935,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -945,7 +951,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -961,7 +967,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -977,7 +983,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
