--- a/section.html
+++ b/section.html
@@ -155,7 +155,9 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful
+                    only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -175,7 +177,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -195,7 +198,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -215,7 +219,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -235,7 +240,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -255,7 +261,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -275,7 +282,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -295,7 +303,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -315,7 +324,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -335,7 +345,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -355,7 +366,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -375,7 +387,8 @@
                   <a href="#">
                     <h3 class="heading-medium-v2 pb-3">Which Cryptocurrencies Are Worth the Money?</h3>
                   </a>
-                  <p class="text-small-ash">If you think that the micro accounts are useful only for beginners who may
+                  <p class="text-small-ash line-clamp-2">If you think that the micro accounts are useful only for
+                    beginners who may
                     not be able to cope with
                     the fast dynamics of changing quotes on trading platforms, then this is not so. Professionalism
                     grows out of these cent accounts.
@@ -410,7 +423,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -427,7 +440,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3 line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -444,7 +457,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -461,7 +474,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -478,7 +491,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -528,7 +541,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -544,7 +557,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -560,7 +573,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -576,7 +589,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -592,7 +605,7 @@
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small">
+                    <h4 class="heading-small line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -606,6 +619,7 @@
           </div>
         </div>
 
+        <!-- navigator -->
         <div class="col-lg-9">
           <div class="pagin-wrapper d-flex justify-content-between align-items-center">
             <button class="nav-btn">
