--- a/amp.html
+++ b/amp.html
@@ -161,8 +161,8 @@
   <!-- === main section start === -->
   <main class="main-contents-home py-4">
     <div class="container">
-      <div class="row gy-3 gx-xl-4">
-        <div class="col-lg-9 bor-right">
+      <div class="content-wrapper">
+        <div class="left-content">
           <div class="cont-details">
             <span class="heading-semibig">World</span>
             <span class="publish-time">May 17, 2022 03:08 PM EDT</span>
@@ -309,7 +309,7 @@
         </div>
 
         <!-- right side -->
-        <div class="col-lg-3">
+        <div class="sidebar">
           <div class="video ratio ratio-16x9 mb-3 mb-xl-4">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/i810CxN5Q6Q?si=QL-iaalOFyZXJDdH"
               title="YouTube video player" allow="accelerometer; autoplay;">
@@ -329,8 +329,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp1.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">1</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">1</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -346,8 +348,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp2.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">2</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">2</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -363,8 +367,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp3.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">3</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">3</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -380,8 +386,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp4.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">4</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">4</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -397,8 +405,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp5.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">5</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">5</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -410,6 +420,7 @@
               </div>
             </div>
           </div>
+          <div class="chr mb-2"></div>
 
           <!-- newsletter -->
           <div class="newsletters pb-3 pb-xl-4">
@@ -553,9 +564,9 @@
 
     <div class="container">
       <div class="row gy-4">
-        <div class="col-6 col-md-8">
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">News</a></li>
                 <li><a href="#">World</a></li>
@@ -566,7 +577,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -575,7 +586,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
@@ -585,7 +596,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-md-4">
           <div class="sign-up">
             <p>Sign up for WEekly Money Times and more</p>
             <form>
