--- a/index.html
+++ b/index.html
@@ -850,8 +850,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp1.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">1</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">1</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -867,8 +869,48 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp2.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">2</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">2</span>
+                  </div>
+                </div>
+                <div class="col-8">
+                  <a href="#">
+                    <h4 class="heading-small line-clamp-3 line-clamp-3">
+                      10 little Things that will Make a Big Difference in Your FX Trading
+                    </h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <hr>
+
+            <div class="news-link">
+              <div class="row gy-3">
+                <div class="col-4 pe-0 position-relative">
+                  <div class="position-relative">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">3</span>
+                  </div>
+                </div>
+                <div class="col-8">
+                  <a href="#">
+                    <h4 class="heading-small line-clamp-3">
+                      10 little Things that will Make a Big Difference in Your FX Trading
+                    </h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <hr>
+            <div class="news-link">
+              <div class="row gy-3">
+                <div class="col-4 pe-0 position-relative">
+                  <div class="position-relative">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">4</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -884,42 +926,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp3.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">3</span>
-                </div>
-                <div class="col-8">
-                  <a href="#">
-                    <h4 class="heading-small line-clamp-3">
-                      10 little Things that will Make a Big Difference in Your FX Trading
-                    </h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <hr>
-            <div class="news-link">
-              <div class="row gy-3">
-                <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp4.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">4</span>
-                </div>
-                <div class="col-8">
-                  <a href="#">
-                    <h4 class="heading-small line-clamp-3">
-                      10 little Things that will Make a Big Difference in Your FX Trading
-                    </h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <hr>
-
-            <div class="news-link">
-              <div class="row gy-3">
-                <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp5.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">5</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">5</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -1049,9 +1059,9 @@
 
     <div class="container">
       <div class="row gy-4">
-        <div class="col-6 col-md-8">
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">News</a></li>
                 <li><a href="#">World</a></li>
@@ -1062,7 +1072,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -1071,7 +1081,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
@@ -1081,7 +1091,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-md-4">
           <div class="sign-up">
             <p>Sign up for WEekly Money Times and more</p>
             <form>
