--- a/section.html
+++ b/section.html
@@ -470,8 +470,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp1.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">1</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">1</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -487,8 +489,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp2.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">2</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">2</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -504,8 +508,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp3.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">3</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">3</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -521,8 +527,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp4.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">4</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">4</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -538,8 +546,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp5.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">5</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">5</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -551,7 +561,7 @@
               </div>
             </div>
           </div>
-
+          <div class="chr mb-2"></div>
           <!-- newsletter -->
           <div class="newsletters pb-3 pb-xl-4">
             <p class="section-title">Newsletters</p>
@@ -716,9 +726,9 @@
 
     <div class="container">
       <div class="row gy-4">
-        <div class="col-6 col-md-8">
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">News</a></li>
                 <li><a href="#">World</a></li>
@@ -729,7 +739,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -738,7 +748,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
@@ -748,7 +758,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-md-4">
           <div class="sign-up">
             <p>Sign up for WEekly Money Times and more</p>
             <form>
