--- a/article.html
+++ b/article.html
@@ -258,8 +258,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp1.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">1</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">1</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -275,8 +277,48 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp2.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">2</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">2</span>
+                  </div>
+                </div>
+                <div class="col-8">
+                  <a href="#">
+                    <h4 class="heading-small line-clamp-3 line-clamp-3">
+                      10 little Things that will Make a Big Difference in Your FX Trading
+                    </h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <hr>
+
+            <div class="news-link">
+              <div class="row gy-3">
+                <div class="col-4 pe-0 position-relative">
+                  <div class="position-relative">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">3</span>
+                  </div>
+                </div>
+                <div class="col-8">
+                  <a href="#">
+                    <h4 class="heading-small line-clamp-3">
+                      10 little Things that will Make a Big Difference in Your FX Trading
+                    </h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <hr>
+            <div class="news-link">
+              <div class="row gy-3">
+                <div class="col-4 pe-0 position-relative">
+                  <div class="position-relative">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">4</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -292,42 +334,10 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp3.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">3</span>
-                </div>
-                <div class="col-8">
-                  <a href="#">
-                    <h4 class="heading-small line-clamp-3">
-                      10 little Things that will Make a Big Difference in Your FX Trading
-                    </h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <hr>
-            <div class="news-link">
-              <div class="row gy-3">
-                <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp4.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">4</span>
-                </div>
-                <div class="col-8">
-                  <a href="#">
-                    <h4 class="heading-small line-clamp-3">
-                      10 little Things that will Make a Big Difference in Your FX Trading
-                    </h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <hr>
-
-            <div class="news-link">
-              <div class="row gy-3">
-                <div class="col-4 pe-0 position-relative">
-                  <img src="assets/images/mp5.png" alt="image" class="img-fluid">
-                  <span class="absolute-number">5</span>
+                  <div class="position-relative">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <span class="absolute-number">5</span>
+                  </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -339,7 +349,7 @@
               </div>
             </div>
           </div>
-
+          <div class="chr mb-2"></div>
           <!-- newsletter -->
           <div class="newsletters pb-3 pb-xl-4">
             <p class="section-title">Newsletters</p>
@@ -482,9 +492,9 @@
 
     <div class="container">
       <div class="row gy-4">
-        <div class="col-6 col-md-8">
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">News</a></li>
                 <li><a href="#">World</a></li>
@@ -495,7 +505,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Privacy Policy</a></li>
@@ -504,7 +514,7 @@
               </ul>
             </div>
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col-4">
               <ul class="p-0">
                 <li><a href="#">Facebook</a></li>
                 <li><a href="#">Twitter</a></li>
@@ -514,7 +524,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
+        <div class="col-md-4">
           <div class="sign-up">
             <p>Sign up for WEekly Money Times and more</p>
             <form>
